--- a/UI_UX/templates/base.html
+++ b/UI_UX/templates/base.html
@@ -6,7 +6,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
+    <link rel="manifest" href="/manifest.json">
+    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
 
@@ -141,6 +142,17 @@
 
     </nav>
     {% block content %} {% endblock %}
+    <script type="text/javascript">
+      if ('serviceWorker' in navigator) {
+         console.log("Will the service worker register?");
+         navigator.serviceWorker.register('service-worker.js')
+           .then(function(reg){
+             console.log("Yes, it did.");
+          }).catch(function(err) {
+             console.log("No it didn't. This happened:", err)
+         });
+      }
+     </script>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
@@ -153,5 +165,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     -->
 </body>
-
 </html>
