--- a/UI_UX/templates/base.html
+++ b/UI_UX/templates/base.html
@@ -145,7 +145,7 @@
     <script type="text/javascript">
       if ('serviceWorker' in navigator) {
          console.log("Will the service worker register?");
-         navigator.serviceWorker.register('service-worker.js')
+         navigator.ServiceWorkerContainer.register('service-worker.js')
            .then(function(reg){
              console.log("Yes, it did.");
           }).catch(function(err) {
