--- a/UI_UX/templates/base.html
+++ b/UI_UX/templates/base.html
@@ -21,27 +21,45 @@
     <!-- Fonts for index link -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
     
     
     <style>
         a {
             cursor: pointer;
             padding: 0px;
+        .font {
+            font-family: 'Roboto', sans-serif;
+    }
         }
-        
+        }
+
     </style>
 
-    <title>Awake</title>
+    <title>Arise - Spiritual Transformation | Spiritual Well being</title>
 </head>
+    <!-- Optional JavaScript; choose one of the two! -->
 
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    -->
+{% block content %}{% endblock %}
+{% if user.is_authenticated %}
 <body>
     <nav class="navbar fixed-top  navbar-dark " style="background-color: black;">
+
   
   <!-- Split dropleft button -->
   <style>
-    body {
-      font-family: "Lato", sans-serif;
-    }
+
     
     .sidebar {
       height: 100%;
@@ -80,7 +98,7 @@
     .openbtn {
       font-size: 20px;
       cursor: pointer;
-      background-color: #111;
+      background-color: black;
       color: white;
       padding: 8px 1px;
       border: none;
@@ -103,18 +121,18 @@
     </style>
     </head>
     <body>
-    
-    <div id="mySidebar" class="sidebar">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fas fa-arrow-circle-left fa-1x"></i></a>
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Clients</a>
-      <a href="#">Contact</a>
-    </div>
-    
-    <div id="main">
-      <button class="openbtn" onclick="openNav()"><i class="fas fa-comment-dots fa-1x"></i></button>  
-     </div>
+
+        <div id="mySidebar" class="sidebar">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fas fa-arrow-circle-left fa-1x"></i></a>
+          <a href="#">About</a>
+          <a href="#">Services</a>
+          <a href="#">Clients</a>
+          <a href="#">Contact</a>
+        </div>
+        <div id="main">
+          <button class="openbtn" onclick="openNav()"><i class="fas fa-comment-dots fa-1x"></i></button>
+         </div>
+
     
     <script>
     function openNav() {
@@ -129,30 +147,41 @@
     </script>
     
   </div>
-  <p style="color: white; margin-left: -80px; font-family:cursive; font-size: 25px;">Awake<img class="logo" src="{% static 'images/yoga.png' %}"/></p>
-  <a class="navbar-brand" href="{% url 'purchase' %}"><i class="fas fa-cart-plus fa-1x"></i
-    ></a>
+  <p style="color: white; margin-left: -80px; font-family:cursive; font-size: 25px;">Arise  <img class="logo" src="{% static 'images/yoga.png' %}"/></p>
+    {% if user.username == 'ajay10' or user.username == 'awake' %}
+        <a class="navbar-brand" href="#"><i style="color:white;" class="fas fa-plus-circle fa-1x"></i></a>
+    {% else %}
+        <a class="navbar-brand" href="#"><i class="fas fa-cart-plus fa-1x"></i></a>
+    {% endif %}
+
     </nav><br><hr>
-    <nav class="navbar fixed-bottom navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'index' %}" ><i class="fas fa-home fa-1x"></i></a>
-        <a class="navbar-brand" href="#" ><i class="fab fa-youtube fa-1x"></i></a>
-        <a class="navbar-brand" href="" ><i class="fas fa-info-circle fa-1x"></i></a>
-        <a class="navbar-brand" href="#" ><i class="fas fa-bell fa-1x"></i></a>
-        <a class="navbar-brand" href="{% url 'profile' %}" ><i class="fas fa-user-circle fa-1x"></i></a>
 
-    </nav>
-    {% block content %} {% endblock %}
-    
-    <!-- Optional JavaScript; choose one of the two! -->
+        <nav class="navbar fixed-bottom navbar-light" style="background-color:#ff4800;">
+            <a class="navbar-brand" href="{% url 'index' %}">
+                <i class="fas fa-home fa-1x" style="color:white;"></i></a>
+            <a class="navbar-brand" href="#" ><i style="color:white;" class="fab fa-youtube fa-1x"></i></a>
+            <a class="navbar-brand" href="#" ><i style="color:white;" class="fas fa-info-circle fa-1x"></i></a>
+            <a class="navbar-brand" href="{% url 'logout' %}" ><i style="color:white;" class="fas fa-power-off fa-1x"></i></a>
+            <a class="navbar-brand" href="#" ><i style="color:white;" class="fas fa-user-circle fa-1x"></i></a>
+        </nav>
 
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    -->
+    <div class="bgbody">
+
+    </div>
+
 </body>
 </html>
+{% else %}
+<div class="container">
+    <!-- As a link -->
+    <nav class="navbar fixed-top  navbar-dark " style="background-color: black;padding:10px;">
+  <div class="container-fluid">
+    <p style="color: white; position:center; font-family:cursive; font-size: 25px;">Arise<img class="logo" src="{% static 'images/yoga.png' %}"/></p>
+
+    <a class="btn btn-dark btn-lg btn-block" style="background-color: black;" href="{% url 'login' %}">Login</a>
+    <a class="btn btn-dark btn-lg btn-block" style="background-color: black; float:right;" href="{% url 'register' %}">New Member</a>
+  </div>
+</nav>
+</div>
+{% endif %}
