--- a/members/templates/registration/register.html
+++ b/members/templates/registration/register.html
@@ -6,7 +6,7 @@
     {% if user.is_authenticated %}
     <h3>You have allready registered..!!</h3>
 
-    {% else %}
+    {% else %}<br><br><br><br><br>
     <h3>New Member? Register with us</h3>
     <hr>
             <form method="POST">
