--- a/members/templates/registration/register.html
+++ b/members/templates/registration/register.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 {% block content %} <br /><br />
-<div class="container">
+<div class="container"><br><br><br><br><br><br><br><br><br><br>
     {% if user.is_authenticated %}
     <h3>You have allready registered..!!</h3>
 
-    {% else %}<br><br><br><br><br>
+    {% else %}
     <h3>New Member? Register with us</h3>
     <hr>
             <form method="POST">
